[package]
name = "rusty_rss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros", "sqlite-storage"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.8", features = ["full", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
chrono = { version = "0.4.23", features = ["serde"] }
regex = "1.7.1"
